--- a/src/style.css
+++ b/src/style.css
@@ -5,6 +5,14 @@
   margin: 0px;
   padding: 0px;
 }
+html,body
+{
+    width: 100%;
+    /* height: 100%; */
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+}
 body {
     overflow-x: hidden;
     color: #212121;
@@ -1437,3 +1445,6 @@ form .floating-label-form-group {
 #faq #faq-list a.collapsed i::before {
   content: "\f055" !important;
 }
+ .footer-newsletter{
+   margin: 0px;
+ }
