--- a/src/style.css
+++ b/src/style.css
@@ -11,6 +11,7 @@ html,body
     /* height: 100%; */
     margin: 0px;
     padding: 0px;
+     scroll-behavior: smooth;
     overflow-x: hidden; 
 }
 body {
@@ -291,7 +292,7 @@ section {
 }
 
 section h2 {
-    margin: 25px;
+    /* margin: 25px; */
     font-size: 3em;
 }
 
@@ -1299,17 +1300,15 @@ form .floating-label-form-group {
   transition: transform calc(var(--d) * 2) var(--e);
 }
 .tiles:nth-child(1):before {
-  background-image: url(https://images.unsplash.com/photo-1517021897933-0e0319cfbc28?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ);
+  background-image: url(../Images/shubham.jpeg);
 }
 .tiles:nth-child(2):before {
-  background-image: url(https://images.unsplash.com/photo-1533903345306-15d1c30952de?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ);
+  background-image: url(../Images/Akriti.jpeg);
 }
 .tiles:nth-child(3):before {
-  background-image: url(https://images.unsplash.com/photo-1545243424-0ce743321e11?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ);
+  background-image: url(../Images/Ayushi.jpeg);
 }
-.tiles:nth-child(4):before {
-  background-image: url(https://images.unsplash.com/photo-1531306728370-e2ebd9d7bb99?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ);
-}
+ 
 
 .content {
   position: relative;
@@ -1333,7 +1332,7 @@ form .floating-label-form-group {
 
 .copy {
   font-family: var(--font-serif);
-  font-size: 1.125rem;
+  font-size: 1.5rem;
   font-style: italic;
   line-height: 1.35;
 }
@@ -1448,3 +1447,4 @@ form .floating-label-form-group {
  .footer-newsletter{
    margin: 0px;
  }
+  
