--- a/src/style.css
+++ b/src/style.css
@@ -1447,4 +1447,8 @@ form .floating-label-form-group {
  .footer-newsletter{
    margin: 0px;
  }
-  
+/*   MMMUt logo maintainance  */
+
+#mmmut-logo{
+  height:40px!important;
+}
