--- a/src/style.css
+++ b/src/style.css
@@ -1449,6 +1449,6 @@ form .floating-label-form-group {
  }
 /*   MMMUt logo maintainance  */
 
-#mmmut-logo{
+.mmmut-logo{
   height:40px!important;
 }
